<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/pokemonDetailsFragment"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <com.google.android.material.appbar.MaterialToolbar
        android:id="@+id/materialToolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/pikachu_main_color"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:navigationIcon="@drawable/baseline_arrow_back_24"
        app:title="name"
        app:titleTextAppearance="@style/TextAppearance.Primary.Title" />


    <ViewFlipper
        android:id="@+id/viewFlipper"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/materialToolbar">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageView
                android:id="@+id/imageFront"
                android:layout_width="140dp"
                android:layout_height="140dp"
                android:layout_marginVertical="16dp"
                android:background="@drawable/rounded_corner_preview"
                android:contentDescription="@string/pokemonimage"
                app:layout_constraintEnd_toStartOf="@+id/imageBack"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <ImageView
                android:id="@+id/imageBack"
                android:layout_width="140dp"
                android:layout_height="140dp"
                android:background="@drawable/rounded_corner_preview"
                android:contentDescription="@string/pokemonimage"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toEndOf="@+id/imageFront"
                app:layout_constraintTop_toTopOf="@+id/imageFront" />

            <TextView
                android:id="@+id/height"
                style="@style/TextAppearance.Primary"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="16dp"
                android:text="@string/height"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/imageFront" />

            <TextView
                android:id="@+id/weight"
                style="@style/TextAppearance.Primary"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="16dp"
                android:text="@string/weight"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/height" />

            <TextView
                android:id="@+id/stats"
                style="@style/TextAppearance.Primary"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="16dp"
                android:text="@string/stats"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/weight" />
        </androidx.constraintlayout.widget.ConstraintLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/errorImageView"
                android:layout_width="140dp"
                android:layout_height="140dp"
                android:contentDescription="@string/errorimage"
                android:src="@drawable/pika_error" />

            <TextView
                android:id="@+id/unexpectedErrorTitle"
                style="@style/TextAppearance.Primary"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:text="@string/unexpected_error"
                android:textAlignment="center" />

            <TextView
                android:id="@+id/unexpectedErrorDescription"
                style="@style/TextAppearance.Secondary"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:textAlignment="center" />

            <Button
                android:id="@+id/errorRefreshButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:backgroundTint="@color/pikachu_main_color"
                android:text="@string/refresh"
                android:textColor="@color/black" />
        </LinearLayout>

        <com.google.android.material.progressindicator.CircularProgressIndicator
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:indeterminate="true"
            app:indicatorColor="@color/pikachu_main_color"
            app:indicatorSize="60dp" />

    </ViewFlipper>


</androidx.constraintlayout.widget.ConstraintLayout>